# goldencheetah-proxy

./: Makefile  README.md  proxy.py  pyproject.toml  sweatstack.toml
.agents/skills/goldencheetah-proxy/: SKILL.md
goldencheetah-web-viewer/: index.html
public/: index-local.html  index.html
src/goldencheetah_proxy/: __init__.py  __main__.py  proxy.py
tests/: test_proxy.py
worker/: index.js  wrangler.toml
