[project]
name = "goldencheetah-proxy"
version = "0.3.0"
description = "CORS proxy for the GoldenCheetah API"
readme = "README.md"
authors = [
    { name = "Aart Goossens", email = "aart@goossens.me" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.scripts]
goldencheetah-proxy = "goldencheetah_proxy.proxy:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]
